# SaturnFX

./: .gitignore  .gitmodules  CMakeLists.txt
app/: CMakeLists.txt
app/src/: Main.cpp
saturnfx/: CMakeLists.txt
saturnfx/inc/saturnfx/: Framework.hpp
saturnfx/inc/saturnfx/Debugging/: Log.hpp
saturnfx/inc/saturnfx/Eventing/: ConsumableEvent.hpp  Event.hpp  EventSystem.hpp  EventType.hpp  FunctionalEventListener.hpp  IEvent.hpp  IEventListener.hpp  IEventSource.hpp  ITypedEventListener.hpp
saturnfx/inc/saturnfx/Eventing/Window/: WindowCloseEvent.hpp  WindowEvent.hpp
saturnfx/inc/saturnfx/Graphics/: GraphicsContext.hpp
saturnfx/inc/saturnfx/Graphics/Command/: Command.hpp  CommandContext.hpp  CommandQueue.hpp  CommandType.hpp  FunctionCommand.hpp  ICommand.hpp
saturnfx/inc/saturnfx/Utils/: FixedString.hpp  Types.hpp
saturnfx/inc/saturnfx/Windowing/: ClientAPI.hpp  ContextCreationAPI.hpp  ContextReleaseBehavior.hpp  ContextRobustness.hpp  OpenGLProfile.hpp  Window.hpp  WindowProperties.hpp
saturnfx/src/: pch.hpp
saturnfx/src/saturnfx/: Framework.cpp
saturnfx/src/saturnfx/Debugging/: Log.cpp
saturnfx/src/saturnfx/Eventing/: EventSystem.cpp
saturnfx/src/saturnfx/Graphics/: GraphicsContext.cpp
saturnfx/src/saturnfx/Graphics/Command/: CommandQueue.cpp  FunctionCommand.cpp
saturnfx/src/saturnfx/Windowing/: Window.cpp
